--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
-.App {
-  text-align: center;
+:root {
+    --clrMain: rgb(28, 1, 32);
+    --clrTopbar: rgb(27, 12, 29);
+    --clrMenu: rgb(15, 0, 17);
+    --clrFooter: rgb(30, 22, 30);
+    --clrText: rgb(246, 240, 247);
+    --clrTextHover: rgb(215, 195, 219);
+    --clrSelection: rgb(145, 122, 200);
+    --tenPadding: 0% 10%;
 }
 
 .App-logo {
@@ -13,26 +20,15 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
+.App {
+  text-align: center;
+  background-image: linear-gradient(to top right,rgb(28, 1, 32), rgb(37, 31, 38));
+  color: var(--clrText);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
