nav and hero setup

--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,40 @@
+/* a,
+a:hover,
+a:focus,
+a:active {
+  text-decoration: none;
+  color: inherit;
+}
+
 :root {
-    --clrMain: rgb(28, 1, 32);
-    --clrTopbar: rgb(27, 12, 29);
-    --clrMenu: rgb(15, 0, 17);
-    --clrFooter: rgb(30, 22, 30);
-    --clrText: rgb(246, 240, 247);
-    --clrTextHover: rgb(215, 195, 219);
-    --clrSelection: rgb(145, 122, 200);
-    --tenPadding: 0% 10%;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  --clrMain: rgb(28, 1, 32);
+  --clrNavbar: rgb(27, 12, 29);
+  --clrMenu: rgb(15, 0, 17);
+  --clrFooter: rgb(30, 22, 30);
+  --clrText: rgb(246, 240, 247);
+  --clrTextHover: rgb(215, 195, 219);
+  --clrSelection: rgb(145, 122, 200);
+  --tenPadding: 0% 10%;
 }
 
 .App {
   text-align: center;
-  background-image: linear-gradient(to top right,rgb(28, 1, 32), rgb(37, 31, 38));
+  background-image: linear-gradient(
+    to top right,
+    rgb(28, 1, 32),
+    rgb(37, 31, 38)
+  );
   color: var(--clrText);
+  font-family: "Poppins", sans-serif;
+  font-size: calc(10px + 2vmin);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
 }
 
+.navbar {
+  background: var(--clrNavbar);
+  color: var(--clrText);
+} */
